2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	Fix svn-externals.
	* svn-externals: Correctly remove the option when calling
	svn_externals_update.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	install-sh -C.
	* install-sh: Support -C.
	The point is to avoid install urbi headers over and over
	again, to avoid useless recompilations.
	* bootstrap: Protect install-sh from being overriden by
	Automake's.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	Add original install-sh.
	* install-sh: New.

2006-10-15  Akim Demaille  <demaille@gostai.com>

	* svn-externals: Add missing fi.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	svn-externals --upgrade=DIR.
	* svn-externals: Support an argument for --upgrade.
	* build-aux.mk (baux-up): Upgrade just build-aux.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	Add baux-pin.
	* build-aux.mk (baux-pin): New.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	bootstrap makes.
	* bootstrap: Re-make if possible.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	build-aux.mk.
	* build-aux.mk: New.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	svn-externals.
	* svn-externals: New.

2006-10-06  Akim Demaille  <akim@lrde.epita.fr>

	Use an initialized CLEANFILES.
	* revision.mk: Do that.

2006-10-06  Akim Demaille  <akim@lrde.epita.fr>

	bison++ overhaul.
	* bison++.in: No longer ask for a "srcdir", rather rely on the
	paths of the input and output files.

2006-10-06  Akim Demaille  <akim@lrde.epita.fr>

	tc-prog.
	* tc-prog.m4: New.
	* urbi-arg-progs.m4: Rename as.
	* urbi-var-progs.m4: this for consistency.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	* umake.in: No longer a symlink.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	Embed umake.in here.
	* umake.in: New.
	* urbi-sdk.m4: Adjust.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	Formatting changes.
	* urbi-sdk.m4: Do it.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	Better bootstrap.