@@ -1,3 +1,8 @@
+2006-10-16  Akim Demaille  <demaille@gostai.com>
+
+	Don't point to the install kernel when compiling the kernel.
+	* urbi-dirs.m4: Fix that.
+
 2006-10-16  Akim Demaille  <akim.demaille@free.fr>
 
 	Fix svn-externals.
